# road_generation_gazebo

./: .gitignore  CMakeLists.txt  README.md  main.py  package.xml  setup.py
classes/: roads.py  utils.py  worlds.py
collada/: bush.dae  bush_bole.dae
launch/: show_world.launch  test.launch  world_generation.launch
models/bush/: model.config  model.sdf
models/cylinder/: model.sdf
models/cylinder_custom/: model.config  model.sdf
others/: generates.py
script/: road_gazebo.py
scripts/: main.py
src/road_generation_gazebo/: frozen.py  generates.py  roads.py  utils.py  worlds.py
src/road_generation_gazebo/worlds/: custom.world
worlds/: custom.world  example.world
yaml/: metadata.yaml  road_metadata.yaml
